--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@types/recordrtc": "^5.6.14",
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
     "ngx-capture": "^0.13.0",
     "ngx-webcam": "^0.4.1",
+    "recordrtc": "^5.6.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
